# eps-devcontainers

./: .dockerignore  .gitallowed  .gitignore  .pre-commit-config.yaml  .tool-versions  .trivyignore.yaml  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/scripts/: delete_unused_images.sh
.github/workflows/: build_all_images.yml  build_multi_arch_image.yml  ci.yml  delete_old_images.yml  pull_request.yml  release.yml
release_notes/: v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.0.6.md  v1.0.7.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md
scripts/: generate_language_version_files.sh  manually_delete_old_tags.sh  trivy_to_trivyignore.py
src/base/: .trivyignore.yaml  trivy.yaml
src/base/.devcontainer/: .tool-versions  Dockerfile  devcontainer.json
src/base_node/node_24/: trivy.yaml
src/common/: .trivyignore.yaml  Dockerfile
src/common_node_24/: .trivyignore.yaml  Dockerfile
src/cpt_api/.devcontainer/: Dockerfile  devcontainer.json
src/fhir_facade_api/: .trivyignore.yaml  trivy.yaml
src/fhir_facade_api/.devcontainer/: devcontainer.json
src/githubactions/: Dockerfile
src/languages/node_24_python_3_10/: trivy.yaml
src/languages/node_24_python_3_12/: .trivyignore.yaml  trivy.yaml
src/languages/node_24_python_3_13/: trivy.yaml
src/languages/node_24_python_3_14/: .trivyignore.yaml  (+1 more)
src/node_24_python_3_12/: trivy.yaml
src/node_24_python_3_13/: trivy.yaml
src/node_24_python_3_14/: .trivyignore.yaml  trivy.yaml
src/python_3_10/: .trivyignore.yaml  trivy.yaml
(+59 files in other folders)
